add ffmpeg and rerun task4

--- a/Task4_mp3_own.ipynb
+++ b/Task4_mp3_own.ipynb
@@ -2,96 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pydub import AudioSegment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-21T06:06:12.024161200Z",
+     "start_time": "2023-09-21T06:06:11.909102300Z"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.7.16 (default, Jan 17 2023, 16:06:28) [MSC v.1916 64 bit (AMD64)]\n",
-      "E:/mysql/community/ffmpeg-master-latest-win64-gpl/ffmpeg.exe\n",
-      "E:/mysql/community/ffmpeg-master-latest-win64-gpl/ffprobe.exe\n",
-      "转换完成：Vwf.m4a -> wf.wav\n"
-     ]
+     "data": {
+      "text/plain": "<_io.BufferedRandom name='wf.wav'>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from pydub import silence, AudioSegment\n",
-    "from pathlib import Path\n",
-    " \n",
-    "import os, sys\n",
-    "import matplotlib.pyplot as plt\n",
-    " \n",
-    "print (sys.version)\n",
-    " \n",
-    "#AudioSegment.ffmpeg = os.getcwd()+\"\\\\ffmpeg\\\\bin\\\\ffmpeg.exe\"\n",
-    " \n",
-    "AudioSegment.converter = r\"E:/mysql/community/ffmpeg-master-latest-win64-gpl/ffmpeg.exe\"\n",
-    "AudioSegment.ffprobe   = r\"E:/mysql/community/ffmpeg-master-latest-win64-gpl/ffprobe.exe\"\n",
-    " \n",
-    "print (AudioSegment.converter)\n",
-    "print (AudioSegment.ffprobe)\n",
-    " \n",
+    "from pydub import AudioSegment\n",
     "\n",
-    "# 输入的M4A文件路径\n",
-    "m4a_file = \"Vwf.m4a\"\n",
+    "# Load the M4a file\n",
+    "audio = AudioSegment.from_file(\"Vwf.m4a\", format=\"m4a\")\n",
     "\n",
-    "# 输出的WAV文件路径\n",
-    "wav_file = \"wf.wav\"\n",
-    "\n",
-    "# 将M4A文件加载为AudioSegment对象\n",
-    "audio = AudioSegment.from_file(m4a_file, format=\"m4a\")\n",
-    "\n",
-    "# 将AudioSegment对象保存为WAV文件\n",
-    "audio.export(wav_file, format=\"wav\")\n",
-    "\n",
-    "print(f\"转换完成：{m4a_file} -> {wav_file}\")\n",
-    "\n",
-    "\n",
+    "# Export it as a WAV file\n",
+    "audio.export(\"wf.wav\", format=\"wav\")\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-21T06:07:47.367356100Z",
+     "start_time": "2023-09-21T06:07:41.985314500Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result2:\n",
-      "{   'alternative': [   {   'confidence': 0.71626985,\n",
-      "                           'transcript': 'play some classic is very exciting '\n",
-      "                                         'and it makes me very motivated to '\n",
-      "                                         'look'},\n",
-      "                       {   'confidence': 0.71664709,\n",
-      "                           'transcript': 'play some classic is very exciting '\n",
-      "                                         'and it makes me very motivated to '\n",
-      "                                         'low'},\n",
-      "                       {   'confidence': 0.71664709,\n",
-      "                           'transcript': 'play some classic is very exciting '\n",
-      "                                         'and it makes me very motivated to '\n",
-      "                                         'Lo'},\n",
-      "                       {   'confidence': 0.71664709,\n",
-      "                           'transcript': 'play some classic is very exciting '\n",
-      "                                         'and it makes me very motivated to '\n",
-      "                                         'Lowe'},\n",
-      "                       {   'confidence': 0.70084226,\n",
-      "                           'transcript': \"play some classic it's very exciting \"\n",
-      "                                         'and it makes me very motivated to '\n",
-      "                                         'look'}],\n",
-      "    'final': True}\n",
       "Transcription: play some classic is very exciting and it makes me very motivated to look\n"
      ]
     }
@@ -115,6 +67,15 @@
     "except sr.RequestError as e:\n",
     "    print(\"Could not request results; {0}\".format(e))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
